Move testEvictedTabReloadFailure to an external URL egtest target.

BUG=709126
R=baxley@chromium.org

Review-Url: https://codereview.chromium.org/2836403002
Cr-Commit-Position: refs/heads/master@{#468640}

Former-commit-id: eb7020961d6e218330eef899e33aef7a865219ae